plugins {
    id 'java'
    id 'application'
}

mainClassName = 'com.github.immortaleeb.hearts.Application'

repositories {
    mavenCentral()
}

dependencies {
    testImplementation 'org.hamcrest:hamcrest:2.2'
    testImplementation("org.junit.jupiter:junit-jupiter-api:5.7.1")
    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.7.1")
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(16)
    }
}

test {
    useJUnitPlatform()
}

// fix java 16 compilation
tasks.withType( JavaCompile ).configureEach {
    options.forkOptions.jvmArgs.addAll( ['--add-opens', 'jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED'] )
}
